crates/rargs/tests/snapshots/test_scripts__stderr dependencies.sh upload.snap
---
source: crates/rargs/tests/test_scripts.rs
description: "[stderr] dependencies.sh upload"
expression: "String::from_utf8(match \"stderr\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
[31mMissing dependency: [33mfoo[31m[0m


